// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline Newsletter Puff renders 'saving' when the button is clicked 1`] = `
<View
  className="inline-newsletter-puff__InpContainer-sc-1gmgdfq-0 kzARNX"
>
  <View
    className="inline-newsletter-puff__InpImageContainer-sc-1gmgdfq-1 jFQKoN"
  >
    Image rendered with imageUri=https://nuk-tnl-deck-prod-static.s3-eu-west-1.amazonaws.com/uploads/2aa9050e6c3d4de682f11a4802ebba96.jpg
  </View>
  <View
    className="inline-newsletter-puff__InpSignupContainer-sc-1gmgdfq-5 jrBAqZ"
  >
    <Text
      className="inline-newsletter-puff__InpSignupLabel-sc-1gmgdfq-6 bCCXpr"
    >
      STRAIGHT IN YOUR INBOX
    </Text>
    <Text
      className="inline-newsletter-puff__InpSignupHeadline-sc-1gmgdfq-7 ioukMM"
    >
      Politics. Explained.
    </Text>
    <Text
      className="inline-newsletter-puff__InpCopy-sc-1gmgdfq-8 eokhLb"
    >
      Sign up to receive our brilliant Red Box newsletter, Matt Chorley\`s poke at politics delivered every weekday morning at 8am.
    </Text>
    <View
      className="inline-newsletter-puff__InpSignupCTAContainer-sc-1gmgdfq-9 ewuNfs"
    >
      <View
        accessibilityLabel="Saving…"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#006699",
              "borderRadius": 2,
              "height": 45,
              "justifyContent": "center",
              "minWidth": 100,
              "width": "100%",
            },
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "#1D1D1B",
              "borderStyle": "solid",
              "borderWidth": 2,
              "color": "#1D1D1B",
              "elevation": 0,
              "fontFamily": "GillSansMTStd-Medium",
              "height": 45,
              "justifyContent": "center",
              "letterSpacing": 0.2,
              "width": "100%",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 16,
                "lineHeight": 16,
                "paddingTop": 5,
              },
              null,
              null,
              Object {
                "color": "#1D1D1B",
              },
            ]
          }
          title="Saving…"
        >
          Saving…
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Inline Newsletter Puff renders null when is already subscribed 1`] = `null`;

exports[`Inline Newsletter Puff renders placeholder when loading 1`] = `
<View
  className="inline-newsletter-puff__InpContainer-sc-1gmgdfq-0 kzARNX"
  style={
    Object {
      "height": 257,
    }
  }
>
  Placeholder rendered
</View>
`;

exports[`Inline Newsletter Puff renders signup state 1`] = `
<View
  className="inline-newsletter-puff__InpContainer-sc-1gmgdfq-0 kzARNX"
>
  <View
    className="inline-newsletter-puff__InpImageContainer-sc-1gmgdfq-1 jFQKoN"
  >
    Image rendered with imageUri=https://nuk-tnl-deck-prod-static.s3-eu-west-1.amazonaws.com/uploads/2aa9050e6c3d4de682f11a4802ebba96.jpg
  </View>
  <View
    className="inline-newsletter-puff__InpSignupContainer-sc-1gmgdfq-5 jrBAqZ"
  >
    <Text
      className="inline-newsletter-puff__InpSignupLabel-sc-1gmgdfq-6 bCCXpr"
    >
      STRAIGHT IN YOUR INBOX
    </Text>
    <Text
      className="inline-newsletter-puff__InpSignupHeadline-sc-1gmgdfq-7 ioukMM"
    >
      Politics. Explained.
    </Text>
    <Text
      className="inline-newsletter-puff__InpCopy-sc-1gmgdfq-8 eokhLb"
    >
      Sign up to receive our brilliant Red Box newsletter, Matt Chorley\`s poke at politics delivered every weekday morning at 8am.
    </Text>
    <View
      className="inline-newsletter-puff__InpSignupCTAContainer-sc-1gmgdfq-9 ewuNfs"
    >
      <View
        accessibilityLabel="Sign up now"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#006699",
              "borderRadius": 2,
              "height": 45,
              "justifyContent": "center",
              "minWidth": 100,
              "width": "100%",
            },
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "#1D1D1B",
              "borderStyle": "solid",
              "borderWidth": 2,
              "color": "#1D1D1B",
              "elevation": 0,
              "fontFamily": "GillSansMTStd-Medium",
              "height": 45,
              "justifyContent": "center",
              "letterSpacing": 0.2,
              "width": "100%",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 16,
                "lineHeight": 16,
                "paddingTop": 5,
              },
              null,
              null,
              Object {
                "color": "#1D1D1B",
              },
            ]
          }
          title="Sign up now"
        >
          Sign up now
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Inline Newsletter Puff renders signup view when not already subscribed 1`] = `
<View
  className="inline-newsletter-puff__InpContainer-sc-1gmgdfq-0 kzARNX"
>
  <View
    className="inline-newsletter-puff__InpImageContainer-sc-1gmgdfq-1 jFQKoN"
  >
    Image rendered with imageUri=https://nuk-tnl-deck-prod-static.s3-eu-west-1.amazonaws.com/uploads/2aa9050e6c3d4de682f11a4802ebba96.jpg
  </View>
  <View
    className="inline-newsletter-puff__InpSignupContainer-sc-1gmgdfq-5 jrBAqZ"
  >
    <Text
      className="inline-newsletter-puff__InpSignupLabel-sc-1gmgdfq-6 bCCXpr"
    >
      STRAIGHT IN YOUR INBOX
    </Text>
    <Text
      className="inline-newsletter-puff__InpSignupHeadline-sc-1gmgdfq-7 ioukMM"
    >
      Politics. Explained.
    </Text>
    <Text
      className="inline-newsletter-puff__InpCopy-sc-1gmgdfq-8 eokhLb"
    >
      Sign up to receive our brilliant Red Box newsletter, Matt Chorley\`s poke at politics delivered every weekday morning at 8am.
    </Text>
    <View
      className="inline-newsletter-puff__InpSignupCTAContainer-sc-1gmgdfq-9 ewuNfs"
    >
      <View
        accessibilityLabel="Sign up now"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#006699",
              "borderRadius": 2,
              "height": 45,
              "justifyContent": "center",
              "minWidth": 100,
              "width": "100%",
            },
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "#1D1D1B",
              "borderStyle": "solid",
              "borderWidth": 2,
              "color": "#1D1D1B",
              "elevation": 0,
              "fontFamily": "GillSansMTStd-Medium",
              "height": 45,
              "justifyContent": "center",
              "letterSpacing": 0.2,
              "width": "100%",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 16,
                "lineHeight": 16,
                "paddingTop": 5,
              },
              null,
              null,
              Object {
                "color": "#1D1D1B",
              },
            ]
          }
          title="Sign up now"
        >
          Sign up now
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Inline Newsletter Puff renders the success view after subscribing  1`] = `
<View
  className="inline-newsletter-puff__InpContainer-sc-1gmgdfq-0 kzARNX"
>
  <View
    className="inline-newsletter-puff__InpImageContainer-sc-1gmgdfq-1 jFQKoN"
  >
    Image rendered with imageUri=https://nuk-tnl-deck-prod-static.s3-eu-west-1.amazonaws.com/uploads/2aa9050e6c3d4de682f11a4802ebba96.jpg
  </View>
  <View
    className="inline-newsletter-puff__InpSubscribedContainer-sc-1gmgdfq-2 cnhWRN"
  >
    <Text
      className="inline-newsletter-puff__InpSubscribedHeadline-sc-1gmgdfq-3 eJBljI"
    >
      You’ve successfully signed up
    </Text>
    <Text
      className="inline-newsletter-puff__InpSubscribedCopy-sc-1gmgdfq-4 btuPmK"
    >
      Congratulations you can now enjoy daily updates from Red Box.
    </Text>
    <View
      className="inline-newsletter-puff__InpPreferencesContainer-sc-1gmgdfq-10 fpkSWV"
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          className="inline-newsletter-puff__InpPreferencesView-sc-1gmgdfq-13 joMqQY"
        >
          <Text
            className="inline-newsletter-puff__InpPreferencesText-sc-1gmgdfq-11 hiXXJO"
          >
            Manage preferences here
          </Text>
          <View
            className="inline-newsletter-puff__InpIconContainer-sc-1gmgdfq-12 fjYueD"
          >
            <ARTSurfaceView
              style={
                Array [
                  undefined,
                  Object {
                    "height": 14,
                    "width": 7,
                  },
                ]
              }
            >
              <ARTGroup
                opacity={1}
                transform={
                  Array [
                    0.11666666666666667,
                    0,
                    0,
                    0.11666666666666667,
                    -4.9,
                    -1.4,
                  ]
                }
              >
                <ARTGroup
                  opacity={1}
                  transform={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                >
                  <ARTShape
                    d={
                      Array [
                        0,
                        45.8,
                        132,
                        2,
                        42,
                        128.2,
                        2,
                        74.8,
                        72,
                        2,
                        42,
                        15.8,
                        2,
                        45.8,
                        12,
                        2,
                        102,
                        72,
                        1,
                      ]
                    }
                    fill={
                      Array [
                        0,
                        0,
                        0.4,
                        0.6,
                        1,
                      ]
                    }
                    opacity={1}
                    stroke={null}
                    strokeCap={1}
                    strokeDash={null}
                    strokeJoin={1}
                    strokeWidth={1}
                    transform={
                      Array [
                        1,
                        0,
                        0,
                        1,
                        0,
                        0,
                      ]
                    }
                  />
                </ARTGroup>
              </ARTGroup>
            </ARTSurfaceView>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
